--- a/exo-0/index.html
+++ b/exo-0/index.html
@@ -10,7 +10,7 @@
         <script type="text/javascript">
 
         /* Section 1 */   
-
+//variable
         var name = "Joe";
         var city = 'London';
         var age = 32;
